# nui-template

./: .gitignore  .parcelrc  CMakeLists.txt  README.md  main.cpp  package.json  vcpkg.json
.github/workflows/: build_and_test.yml
_cmake/: common_options.cmake
_cmake/dependencies/: nui.cmake
backend/source/backend/: CMakeLists.txt  main.cpp
cmake/: common_options.cmake
cmake/dependencies/: nui.cmake
frontend/: frontend.cpp
frontend/include/frontend/: main_page.hpp
frontend/source/frontend/: CMakeLists.txt  frontend.cpp  main.cpp
static/: index.html  nui-template.html
static/source/: index.js
vscode_example/: launch.json  tasks.json
vscode_example_windows/: launch.json  tasks.json
